--- a/thesis/tex/intro.tex
+++ b/thesis/tex/intro.tex
@@ -1,18 +1,18 @@
 \chapter{Wstęp}
 \section{Wprowadzenie}
-	Automatyczne planowanie jest dziedziną sztuczej inteligencji, która zajmuje się realizacją sekwencji akcji oraz strategii. Istnieje kilka powszechnie znanych języków formalnych, umożliwiających wyrażanie problemu automatycznego planowania. Najbardziej znane języki to STRIPS (Stanford Research Institute Problem Solver) oraz PDDL(Planning Domain Definition Language), który jest jednym z ważniejszych elementów tej pracy.
+	Automatyczne planowanie jest dziedziną sztucznej inteligencji, która zajmuje się realizacją sekwencji akcji oraz strategii. Istnieje kilka powszechnie znanych języków formalnych, umożliwiających wyrażanie problemu automatycznego planowania. Najbardziej znane języki to STRIPS (\textit{Stanford Research Institute Problem Solver}) oraz PDDL(\textit{Planning Domain Definition Language}), który jest jednym z ważniejszych elementów tej pracy.
 	
-	Pierwsza, oficjalna wersja PDDL została wydana w roku 1998.  Język został rozwinięty specjalnie na potrzeby pierwszego międzynarodowego konkursu planowania – IPC. Pomimo stworzenia przez autora następcy PDDL, OPT (Ontology with Polymorphic Types), język ten nadal był rozwijany. Na dzień dzisiejszy, aktualna wersja to 3.1. Została użyta między innymi na konkursach w roku 2008 oraz 2011.
+	Pierwsza, oficjalna wersja PDDL została wydana w roku 1998.  Język został rozwinięty specjalnie na potrzeby pierwszego międzynarodowego konkursu planowania – IPC. Pomimo stworzenia przez autora następcy PDDL, OPT (\textit{Ontology with Polymorphic Types}), język ten nadal był rozwijany. Na dzień dzisiejszy, aktualna wersja to 3.1. Została użyta między innymi na konkursach w roku 2008 oraz 2011.
 
-	Oprócz głównej wersji PDDL, istnieją  inne, wyspecjalizowane warianty języka. Przykładowo  NDDL (New Domain Definition Language), stworzony przez NASA, różni się między innymi reprezentowaniem zmiennych, czy ideą wykorzystywania aktywności i ograniczeń między nimi a koncepcją stanu i akcji. Kolejna wersja to PPDDL (Probabilistic PDDL) używany podczas konkursu IPC w roku 2004 i 2006.
+	Oprócz głównej wersji PDDL, istnieją  inne, wyspecjalizowane warianty języka. Przykładowo  NDDL (\textit{New Domain Definition Language}), stworzony przez NASA, różni się między innymi reprezentowaniem zmiennych, czy ideą wykorzystywania aktywności i ograniczeń między nimi a koncepcją stanu i akcji. Kolejna wersja to PPDDL (\textit{Probabilistic PDDL}) używany podczas konkursu IPC w roku 2004 i 2006.
 
 
 \section{Motywacja}
-Pomimo stworzenia PDDL, autor nie zapewnił odpowiedniego środowiska programistycznego. Problemem jest również znalezienie odpowiedniego narzędzia. Obecnie dostępne rozwiązania posiadają istotne wady. Są to między innymi brak możliwośći pracy z innym systemem  niż Windows, brakiem odpowiedniego formatowania kodu czy nieodpowiednim kolorowaniem składni. Założeniem projektu GUI4PDDL jest rozwiązanie większości niedogodności związanych z pisaniem w języku PDDL.
+Pomimo stworzenia PDDL, autor nie zapewnił odpowiedniego środowiska programistycznego. Problemem jest również znalezienie odpowiedniego narzędzia. Obecnie dostępne rozwiązania posiadają istotne wady. Są to między innymi brak możliwości pracy z innym systemem  niż Windows, brakiem odpowiedniego formatowania kodu czy nieodpowiednim kolorowaniem składni. Założeniem projektu GUI4PDDL jest rozwiązanie większości niedogodności związanych z pisaniem w języku PDDL.
 \section{Cel i zakres pracy}
 Celem pracy jest stworzenie stworzenie graficznego środowiska programistycznego umożliwiającego pisanie programów w języku PDDL. Program powinien zawierać cechy typowe dla nowoczesnych środowisk. Ważniejsze założenia projektu GUI4PDDL to tworzenie automatycznych wcięć i kolorowanie składni, przez co zwiększa się przejrzystość kodu źródłowego. Kolejnymi znaczącymi założeniami są podpowiadanie składni oraz wykrywanie błędów w kodzie źródłowym, co powinno ułatwiać programiście tworzenie programu. Następnym ważnym elementem jest zarządzanie projektami oraz plikami. Dodatkowo, w związku z wykorzystaniem dużej ilości nawiasów w PDDL, wymagane jest ich dopasowywanie. 
 
-W pierwszej części drugiego rozdziału, przedstawiona została problematyka automatycznego planowania. W drugim fragmencie opisany jest PDDL, a następnie opisano najważniejsze narzędzia służoce do planowania.
+W pierwszej części drugiego rozdziału, przedstawiona została problematyka automatycznego planowania. W drugim fragmencie opisany jest PDDL, a następnie opisano najważniejsze narzędzia służące do planowania.
 
 Kolejny rozdział to opis wymagań funkcjonalnych oraz wymagań pozafunkcjonalnych.
 
@@ -34,27 +34,24 @@ W niniejszym podrozdziale zawarty jest zadań, wykonanych przez poszczególne os
 \begin{description}
   \item[Tomasz Boczkowski] \hfill 
   \begin{itemize}
-\item Pierwsze zadanie
-\item Drugie zadanie
-\item Trzecie zadanie
+\item Moduł analizy kodu PDDL
+\item Wykrywanie błędów składniowych i semantycznych
+\item Podpowiadanie składni
 \end{itemize}
   \item[Mateusz Michalak] \hfill 
     \begin{itemize}
-\item Pierwsze zadanie
-\item Drugie zadanie
-\item Trzecie zadanie
+\item Testy tworzonego oprogramowania
+\item Witryna internetowa
 \end{itemize}
   \item[Wojciech Rybicki] \hfill 
     \begin{itemize}
-\item Pierwsze zadanie
-\item Drugie zadanie
-\item Trzecie zadanie
+\item Integracja wtyczki z istniejącymi narzędziami automatycznego planowania
+\item Moduł do przeglądania danych wyjściowych
 \end{itemize}
   \item[Andrzej Płuszka] \hfill 
     \begin{itemize}
-\item Pierwsze zadanie
-\item Drugie zadanie
-\item Trzecie zadanie
+\item Edytor kodu PDDL i jego integracja z środowiskeim \textit{Eclipse}
+\item Kolorowanie i podpowiadanie składni
 \end{itemize}
 \end{description}
 
