--- a/thesis/tex/used-software.tex
+++ b/thesis/tex/used-software.tex
@@ -1,5 +1,39 @@
 \chapter{Wykorzystane oprogramowanie}
 \section{Eclipse}
+\subsection{Początek}
+W 2001 roku pojawił się na rynku mało znany projekt typu opensource – \emph{Eclipse 1.0}. Program ten został opisany jako “zintegrowane środowisko deweloperskie do wszystkiego i do nieczego w szególności”. W założeniu nie miał to być kolejny zestaw narzędzi, a w pełni skalowanle i rozszerzalne środowisko programistyczne. Razem z programem, udostępniono szereg narzędzi dla deweloperów, umożliwiających rozwijanie projektu. Początkowo Eclipse powstał tylko po to, by dowieść, że można zbudować środowisko rozszerzalne w tak dużym zakresie. Dzięki społeczności, bardzo szybko środowisko to rozwinęło się na wiele języków programowania.
+
+Typowy stereotyp deweloperów open source ukazuje bezinteresownego programistę, nocami pracującego nad poprawą błędów i implementacją własnych pomysłów. W Eclipse, początkowe fragmenty kodu były napisane przez programistów firmy \emph{IBM}. Pracownicy ci dostawali pełne wynagrodzenie za pracę nad otwartym projektem, odpowiadaniem na pytania społeczności, naprawą błędów. Początkowy wkład w rozwój Eclipse miały firmy takie jak Borland, IBM, Merant, QNX Software Systems, Rational Software, RedHat, SuSE, a także TogetherSoft. Firmy te mogły dzięki temu liczyć na wypuszczenie na rynek programów komercyjnych bazujących na tym środowisku. 
+
+Pierwotnie Eclipse składał się z głównych elementów - \emph{Eclipse Platform}, \emph{Eclipse JDT} oraz \emph{Eclipse PDE}. Eclipse Platform stanowił bazę, środowisko programistyczne. JDT to skrót od \emph{Java Devevelopment Tools} - była to pierwsza większa wtyczka, umożliwiająca zarządzanie kodem Java. Jest ona dostępna do dziś, oczywiście w dużo bardziej zaawansowanej formie niż na początku. Ostatni element, PDE (\emph{Plug-in Development Environment}) to narzędzie do rozwijania środowiska Eclipse. Oferuje ono szereg domyślnych wtyczek, zawiera kreatory tworzenia nowych modułów, a także ogromną i wyczerpującą dokumentację na temat całego środowiska.
+
+Na początku ludzie znali Eclipse jako czystą platformę, dziś jest to zaawansowane środowisko programistyczne z ponad 250 aktywnymi projektami. W internecie można znaleźć narzędzia i wtyczki do Eclipse umożliwające pisanie i testowanie kodu niemal w każdym języku programowania.
+
+\subsection{Platforma}
+
+Program Eclipse zbudowany jest w języku \emph{Java}, wymaga więc zainstalowanej Javy na komputerze użytkownika.  Całe środowisko składa się z \emph{pluginów}, czyli osobnych wtyczek współpracyjących ze sobą, oraz rdzenia samego programu (\emph{Eclipse kernel}). Wtyczka to nic innego, jak plik \emph{JAR} z manifestem, określającym zachowanie modułu a także jego przeznaczenie. W manifestach zawierane są również informacje na temat zależności między wtyczkami:
+
+\begin{verbatim}
+<requires>
+	<import plugin="org.apache.xerces"/>
+	<import plugin="org.eclipse.core.resources"/>
+	<import plugin="org.eclipse.update.core"/>
+	:       :        :
+	<import plugin="org.eclipse.text" export="true"/>
+	<import plugin="org.eclipse.ui.workbench.texteditor" export="true"/>
+	<import plugin="org.eclipse.ui.editors" export="true"/>
+</requires>
+\end{verbatim}
+
+By zachęcić deweloperów do rozwijania środowiska Eclipse, wymyślono tzw. \emph{Extension Points}. Extension Points to elementy takie jak okna, dekoratory, menu kontekstowe, kreatory – innymi słowy inne wtyczki, jako że cały Eclipse zbudowany jest modułowo. Korzystając z tych punktów można domyślne elementy podmienić własnymi, bardziej rozbudowanymi modułami.
+
+\begin{verbatim}
+<extension-point id="decorators" name="%ExtPoint.decorators"
+                 schema="schema/decorators.exsd"/>
+\end{verbatim}
+
+Dzięki takiemu rozwiązaniu, rdzenną aplikację można niemal w nieograniczony sposób dostosować do swoich potrzeb. Dobrym przykładem jest tutaj całkiem popularne środowisko deweloperskie \emph{Aptana Studio}. Aplikacja ta została zbudowana całkowicie na rdzeniu Eclipse, można więc zauwazyć pewne podobieństwa w układzie okien, modułowości. Mimo podobieństw jest jednak zupełnie inna, ukierunkowana na jedną gałąź programowania – \emph{Web Development}. Nie wszyscy deweloperzy potrzebują jednak tworzyć całkowicie odrębne oprogramowanie. Eclipse SDK przychodzi z szeregiem domyślnych modułów, takich jak dekoratory, edytory tekstu, wszelkie paski narzędzi i nawigatory. Każdy z tych modułów może zostać zastąpiony własnym, lub rozszerzony o pewne funkcjonalności.
+
 
 \section{ANTLR}
 ANTLR (ang. \emph{ANother Tool for Language Recognition}) jest generatorem
