--- a/thesis/tex/used-software.tex
+++ b/thesis/tex/used-software.tex
@@ -32,7 +32,14 @@ By zachęcić deweloperów do rozwijania środowiska Eclipse, wymyślono tzw. \e
                  schema="schema/decorators.exsd"/>
 \end{verbatim}
 
-Dzięki takiemu rozwiązaniu, rdzenną aplikację można niemal w nieograniczony sposób dostosować do swoich potrzeb. Dobrym przykładem jest tutaj całkiem popularne środowisko deweloperskie \emph{Aptana Studio}. Aplikacja ta została zbudowana całkowicie na rdzeniu Eclipse, można więc zauwazyć pewne podobieństwa w układzie okien, modułowości. Mimo podobieństw jest jednak zupełnie inna, ukierunkowana na jedną gałąź programowania – \emph{Web Development}. Nie wszyscy deweloperzy potrzebują jednak tworzyć całkowicie odrębne oprogramowanie. Eclipse SDK przychodzi z szeregiem domyślnych modułów, takich jak dekoratory, edytory tekstu, wszelkie paski narzędzi i nawigatory. Każdy z tych modułów może zostać zastąpiony własnym, lub rozszerzony o pewne funkcjonalności.
+Dzięki takiemu rozwiązaniu, rdzenną aplikację można niemal w nieograniczony sposób dostosować do swoich potrzeb.
+\begin{figure}[h]
+  \centering
+    \includegraphics{img/custom-window.png}
+    \caption{Dodatkowa zakładka Plan Browser}
+    \label{ana_structure}
+\end{figure}
+Dobrym przykładem jest tutaj całkiem popularne środowisko deweloperskie \emph{Aptana Studio}. Aplikacja ta została zbudowana całkowicie na rdzeniu Eclipse, można więc zauwazyć pewne podobieństwa w układzie okien, modułowości. Mimo podobieństw jest jednak zupełnie inna, ukierunkowana na jedną gałąź programowania – \emph{Web Development}. Nie wszyscy deweloperzy potrzebują jednak tworzyć całkowicie odrębne oprogramowanie. Eclipse SDK przychodzi z szeregiem domyślnych modułów, takich jak dekoratory, edytory tekstu, wszelkie paski narzędzi i nawigatory. Każdy z tych modułów może zostać zastąpiony własnym, lub rozszerzony o pewne funkcjonalności.
 
 
 \section{ANTLR}
