--- a/thesis/tex/implementation.tex
+++ b/thesis/tex/implementation.tex
@@ -1,8 +1,31 @@
 \chapter{Implementacja}
 \section{Zarządzanie projektem PDDL}
 \subsection{Tworzenie projektu PDDL}
-\subsection{Tworzenie nowych plików PDDL}
+\begin{figure}[h]
+  \centering
+    \includegraphics{img/new-project.png}
+    \caption{Kreator nowego projektu PDDL}
+    \label{ana_structure}
+\end{figure}
+Tworzenie nowego projektu PDDL polega na wywołaniu odpowiedniego kreatora. Można go wybrać na dwa sposoby. Pierwszy sposób polega na otwarciu kreatora nowgo projektu. Następnie w nowym oknie należy z listy dostępnych propozycji wybrać kategorię \emph{PDDL} oraz \emph{PDDL Project}. 
 
+W pliku \emph{plugin.xml} utworzono \emph{Extension Point}, w którym zawarto informację o typie nowego kreatora, jego przeznaczeniu, a także jaki projekt ma być utworzony korzystając z tego kreatora. Znajdują się tam także informacje o ikonie projektu, a także perspektywie projektu. Ta ostania jest ważna, ponieważ w widoku perspektywu PDDL pojawiają się nowe funkcje specjalnie stworzone na potrzeby języka. 
+
+Drugi sposób to wybranie osobnej opcji \emph{PDDL Project}. Ta opcja również wymagała utworzenia \emph{Extension Point}. W tym wypadku jednak punkt nie zawiera informacji o nowym kreatorze, a wskazuje na wcześniej wymieniony kreator projektu PDDL.
+
+Extension Point wywołuje klasę \emph{PDDLProjectWizard}, która inicjalizuje nową instancję klasy \emph{PDDLProjectNameAndLocationWizard}, która wyświetla stronę w kreatorze zawierającą pole do podania nazwy kreatora i lokalizacji. 
+
+Po wybraniu nazwy projektu i opcjonalnie lokalizacji (domyślnie aktywny \emph{workspace}), klasa \emph{PDDLProjectNameAndLocationWizard} przekazuje informacje ze strony do głównego kreatora, który wykorzystując domyslne funkcje środowiska Eclipse tworzy nowy, pusty projekt. Extension Point zawiera informacje o zalecanym widoku perspektywy \emph{PDDLPerspective}, dlatego po utworzeniu projektu i aktywowaniu go Eclipse zaproponuje przejście do tej perspektywy.
+
+
+\subsection{Tworzenie nowych plików PDDL}
+Każdy projekt PDDL powinien zawierać przynajmniej jeden plik problemu oraz jeden plik domeny. Wymaga tego gramatyka języka PDDL, aczkolwiek jest możliwe utworzenie większej liczby plików problemu dla tej samej domeny. Jest tak dlatego, ponieważ plik domeny zawiera definicje świata i reguł w nim panujących. Plik problemu definiuje dany problem lub sytuację, którą chcemy wykonać danym świecie. Każdy z plików różni się od siebie, dlatego użytkownik tworząc nowy plik otrzymuje szablon w zależności od wybranej opcji w kreatorze. 
+
+Tworzenie pliku PDDL polega na wybraniu odpowiedniej opcji, podobnie jak w kreatorze nowego projektu PDDL, na dwa sposoby. Po otwarciu właściwego kreatora, \emph{Extension Point} uruchamia klasę \emph{PDDLFileWizard}. Klasa ta tworzy okno kreatora a następne tworzy nową instancję klasy \emph{PDDLFilePage}, która wyświetla typ pliku PDDL oraz okno na nazwę oraz lokalizację.
+
+Po wybraniu opcji oraz nazwy (lokalizacja jest opcjonalna) informacje przekazane są do klasy, która sprawdza czy plik w danej lokalizacji już istnieje. Jeśli nie wybrano innej lokalizacji, domyślnie jest to forlder projektu.
+ 
+Tworzenie pliku i zapisanie do lokalizacji zaimplementowano korzystając kodu źródłowego domyślnego kreatora pliku, dodano natomiast odpowiednie rozszerzenie (\emph{.pddl}). Klasa pobiera z kreatora typ pliku, oraz przekazuje tą informację wraz z nazwą i ścieżką pliku do klasy \emph{PDDLFileWizard}. Na koniec \emph{PDDLFileWizard} tworzy nowy plik w odpowiedniej lokalizacji, wypełnia go treścią zgodną z typem pliku. Po wykonaniu tych czynności plik przekazany jest do edytora tekstu.
 
 \section{Przetwarzanie kodu PDDL}
 W specyfikacji wymagań zostały zawarte punkty dotyczące wyświetlania błędów znajdujących 
